--- a/options.conf
+++ b/options.conf
@@ -1,8 +1,8 @@
 [package]
 name = pdns-recursor
-url = https://downloads.powerdns.com/releases/pdns-recursor-4.1.12.tar.bz2
+url = https://downloads.powerdns.com/releases/pdns-recursor-4.1.17.tar.bz2
 archives = 
-giturl = 
+giturl = https://github.com/PowerDNS/pdns.git
 domain = 
 alias = 
 
