pdns-recursor: Autospec creation for update from version 4.7.3 to version 4.8.0
Asgeir Storesund Nilsen (2):
      Also reconnect on ENETUNREACH.
      Use stringerror

Axel Viala (4):
      [tsan] Data race suppression for avg_latency and send_latency globals.
      getNSEC3PARAM: Use null-ptr instead of 0.
      getNSEC3PARAM callsite: Define to false by default out-param narrow.
      jdnssec was broken link to repository directly.

Charles-Henri Bruyand (15):
      dnsdist: add a statistic for the number of cache cleanups
      dnsdist: add support for user defined metrics
      dnsdist: avoid multiple lookup
      dnsdist: log an error when invalid custom metric name is given
      dnsdist: fix custom metrics documentation
      dnsdist: also register custom metrics to prometheus
      try to appease the spell checker AND the code format checker :)
      dnsdist: fill ringbuffers with responses served from the cache
      process review comments
      Make sure that we do not read past our buffer in any case
      dnsdist docs: add some missing statistics
      keyroller first import
      Update pdns/keyroller/pdnsapi/api.py
      rec: make sure data is at least the size of a dnsheader when constructing a DnstapMessage
      rec: add support for streaming NOD and UDR using dnstap

Chris Hofstaedtler (35):
      rec: remove unused jsrender.js
      rec: use fetch instead of jQuery.ajax/getJSON
      rec: use defer instead of $(document).ready
      rec: read handlebar templates without $()
      rec: show/hide connection error/status without jquery
      rec: read filter1 checkbox without jquery
      rec: bind event handler without jquery
      rec: use Array.forEach instead of jquery.each
      rec: set template output without jquery
      rec: remove jquery
      rec: un-xhtml-ify html
      rec: improve network error handling
      auth/rec web: stop sending Server: header
      auth: merge "main" code into new auth-main.(cc|hh)
      pdns/auth-main.*: form

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = pdns-recursor
-url = https://downloads.powerdns.com/releases/pdns-recursor-4.7.3.tar.bz2
+url = https://downloads.powerdns.com/releases/pdns-recursor-4.8.0.tar.bz2
 archives = 
 giturl = https://github.com/PowerDNS/pdns.git
 domain = 
@@ -35,6 +35,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not use the replacement pattern for file matching
+no_glob = false
 # do not generate debuginfo for this package
 nodebug = false
 # disable stripping binaries
