pdns-recursor: Autospec creation for update from version 4.8.0 to version 4.8.1
Otto Moerbeek (5):
      Infra queries should not use refresh mode.
      rec: refactor unsuppored qtype code and make sure we ServFail on all unsupported qtypes
      Apply suggestions from code review
      Elaborate on NSEC/NSEC3 diffference in comment
      Backport to 4.8.x: Do *not* use QName Minimization for DS retrievals in QM fallback mode.

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = pdns-recursor
-url = https://downloads.powerdns.com/releases/pdns-recursor-4.8.0.tar.bz2
+url = https://downloads.powerdns.com/releases/pdns-recursor-4.8.1.tar.bz2
 archives = 
 giturl = https://github.com/PowerDNS/pdns.git
 domain = 
@@ -27,6 +27,8 @@ conservative_flags = true
 dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
+# compile full (traditional) debug info
+full-debug-info = false
 # optimize build for speed over size
 funroll-loops = false
 # set flags to smallest -02 flags possible
