pdns-recursor: Autospec creation for update from version 4.8.4 to version 4.9.0
AFrisina (1):
      Update installation.rst

Adam Majer (1):
      dnsdist-protobuf: fix compilation with DoH disabled

Aki Tuomi (5):
      dnsdist: Warn on unsupported parameters
      dnsdist-lua: Really ignore negative numberOfStoredSessions
      test_Caching: ecsParsing is called parseECS
      dnsdist-lua: newserver - Warn about invalid and unused parameters
      docs: lmdb - Add blank line after explicit markup

Alexis Romero (14):
      gh actions: added manual removal/installation of odbc packages
      GH actions: added auth odbc{sqlitle3, mssql} tests. Removed from CircleCI
      Apply odbc packages workaround to misc-dailies workflow
      workaround for grub error raised after apt-get dist-upgrade
      gh actions: added ldap and geoip-mmdb tests
      gh actions: simplified collector job in build-and-test-all.yml
      removed ldap and geoip-mmdb tests from circleci
      Avoid Microsoft repo for ODBC. Step 1: allow apt downgrades
      Avoid Microsoft repo for ODBC. Step 1: codeql allow apt downgrades
      Avoid Microsoft repo for ODBC. Step 3: unixodbc install cleanup
      Run build-and-test-all.yml on a custom debian container
      set apt mirror for cifuzz base builder image
      GH actions - misc-dailies: Set clang version for Ubuntu-20
      gh actions: enable ipv6 in docker containers

Andreas Jakum (1):
      rec: serve-stale-extensions works on 30s so an hour should be 120x.

Andrey (1):
      fix ColumnSize argument in SQLBindParameter #12324

Axel Viala (32):
      [clang-tidy:array] in dns.cc/hh std::array instead of c array.
      clang-tidy: DynListener::getLine.
      NIT: move len near usage.
      clang-tidy: Braces + avoid else after throw.
      clang-tidy: Avoid C cast do a reinterpret_cast.
      [bind-backend] Clang-tidy use cpp header.
      [bind-backend] Clang-tidy use auto.
      [bind-backend] Clang-tidy using.
      [bind-backend] Clang-tid

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = pdns-recursor
-url = https://downloads.powerdns.com/releases/pdns-recursor-4.8.4.tar.bz2
+url = https://downloads.powerdns.com/releases/pdns-recursor-4.9.0.tar.bz2
 archives = 
 giturl = https://github.com/PowerDNS/pdns.git
 domain = 
@@ -60,7 +60,7 @@ skip_tests = false
 # add .so files to the lib package instead of dev
 so_to_lib = false
 # configure build for avx2
-use_avx2 = false
+use_avx2 = true
 # configure build for avx512
 use_avx512 = false
 # add clang flags
