--- a/options.conf
+++ b/options.conf
@@ -1,7 +1,7 @@
 [package]
 name = pdns-recursor
-url = https://downloads.powerdns.com/releases/pdns-recursor-4.9.2.tar.bz2
-archives = 
+url = https://downloads.powerdns.com/releases/pdns-recursor-5.0.6.tar.bz2
+archives = http://localhost/cgit/vendor/pdns-recursor/snapshot/pdns-recursor-2024-06-20-05-43-17.tar.xz ./vendor
 giturl = https://github.com/PowerDNS/pdns.git
 domain = 
 alias = 
@@ -9,8 +9,10 @@ alias =
 [autospec]
 # build 32 bit libraries
 32bit = false
+# allow windows executables (*.exe, *.dll) to be packaged
+allow_exe = false
 # allow package to build with test failures
-allow_test_failures = false
+allow_test_failures = true
 # unset %build ld_as_needed variable
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
@@ -20,7 +22,7 @@ broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
 # create vendor archive with cargo
-cargo_vendor = false
+cargo_vendor = true
 # this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
@@ -59,6 +61,8 @@ server = false
 skip_tests = false
 # add .so files to the lib package instead of dev
 so_to_lib = false
+# configure build for apx
+use_apx = false
 # configure build for avx2
 use_avx2 = true
 # configure build for avx512
@@ -67,6 +71,8 @@ use_avx512 = false
 use_clang = false
 # configure build for lto
 use_lto = false
+# use ninja build files
+use_ninja = false
 # require package verification for build
 verify_required = true
 
