--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = pdns-recursor
-url = https://downloads.powerdns.com/releases/pdns-recursor-5.1.0.tar.bz2
+url = https://downloads.powerdns.com/releases/pdns-recursor-5.1.1.tar.bz2
 archives = http://localhost/cgit/vendor/pdns-recursor/snapshot/pdns-recursor-2024-07-18-18-24-31.tar.xz ./vendor
 giturl = https://github.com/PowerDNS/pdns.git
 domain = 
@@ -17,6 +17,8 @@ allow_test_failures = true
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
 autoupdate = true
+# try to use mock short circuit to avoid full rebuilds
+avoid_rebuild = false
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
