--- a/options.conf
+++ b/options.conf
@@ -1,7 +1,7 @@
 [package]
 name = pdns-recursor
-url = https://downloads.powerdns.com/releases/pdns-recursor-5.1.2.tar.bz2
-archives = http://localhost/cgit/vendor/pdns-recursor/snapshot/pdns-recursor-2024-10-03-14-24-15.tar.xz ./vendor
+url = https://downloads.powerdns.com/releases/pdns-recursor-5.1.3.tar.bz2
+archives = http://localhost/cgit/vendor/pdns-recursor/snapshot/pdns-recursor-2024-10-03-14-24-15.tar.xz ./vendor http://localhost/cgit/vendor/pdns-recursor/snapshot/pdns-recursor-2024-10-03-14-24-15.tar.gz ./vendor
 giturl = https://github.com/PowerDNS/pdns.git
 domain = 
 alias = 
